--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -28,8 +28,8 @@
           alt="Qr code of Frontend Mentor web page"
           class="qr-code"
         />
-        <h1>Improve your front-end skills by building projects</h1>
-        <p>
+        <h1 class="title">Improve your front-end skills by building projects</h1>
+        <p class="sub-title">
           Scan the QR code to visit Frontend Mentor and take your coding skills
           to the next level
         </p>
