--- a/contact-form-main/index.html
+++ b/contact-form-main/index.html
@@ -68,7 +68,7 @@
         </div>
         <div class="query gap">
           <label for="query">Query Type <span class="star">*</span></label>
-          <div class="flex-pc-row">
+          <div id="query" class="flex-pc-row">
             <div class="radio gap">
               <input
                 type="radio"
