--- a/faq-accordion-main/index.html
+++ b/faq-accordion-main/index.html
@@ -34,7 +34,7 @@
 
       <div class="card">
         <h1>FAQs</h1>
-        <details open>
+        <details name="FAQ" open>
           <summary>What is Frontend Mentor, and how will it help me?</summary>
           <p>
             Frontend Mentor offers realistic coding challenges to help
@@ -43,7 +43,7 @@
             for portfolio building.
           </p>
         </details>
-        <details>
+        <details name="FAQ">
           <summary>Is Frontend Mentor free?</summary>
           <p>
             Yes, Frontend Mentor offers both free and premium coding challenges,
@@ -51,7 +51,7 @@
             suitable for all skill levels.
           </p>
         </details>
-        <details>
+        <details name="FAQ">
           <summary>Can I use Frontend Mentor projects in my portfolio?</summary>
           <p>
             Yes, you can use projects completed on Frontend Mentor in your
@@ -59,7 +59,7 @@
             potential employers!
           </p>
         </details>
-        <details>
+        <details name="FAQ">
           <summary>
             How can I get help if I'm stuck on a Frontend Mentor challenge?
           </summary>
