--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -29,7 +29,7 @@
         >
           <img
             src="./assets/images/icon-menu.svg"
-            alt="Menu"
+            alt="Open navigation menu"
             focusable="false"
           />
         </button>
@@ -43,7 +43,7 @@
           >
             <img
               src="./assets/images/icon-menu-close.svg"
-              alt="Close menu"
+              alt="Close navigation menu"
               focusable="false"
             />
           </button>
