--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -76,7 +76,7 @@
               power of the platforms back into the hands of the people. But is
               it really fulfilling its promise?
             </p>
-            <a href="#" class="read-more-btn bold">Read More</a>
+            <a href="#" class="read-more-btn bold" aria-label="Read more about Web 3.0">Read More</a>
           </div>
         </article>
         <article class="new">
