--- a/nft-preview-card-component-main/public/index.html
+++ b/nft-preview-card-component-main/public/index.html
@@ -51,7 +51,7 @@
           >
         </h2>
 
-        <p class="font-fw300 pr-16">
+        <p class="font-fw300">
           Our Equilibrium collection promotes balance and calm.
         </p>
 
