--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta name="description" content="Jessica Randall's social card " />
     <link
       rel="icon"
       type="image/png"
@@ -22,18 +22,20 @@
   <body>
     <main>
       <div class="card">
-        <img src="./assets/images/avatar-jessica.jpeg" alt="profile-picture" />
-        <div class="info">
-          <h2>Jessica Randall</h2>
-          <p class="location">London, United Kingdom</p>
-        </div>
+        <img
+          src="./assets/images/avatar-jessica.jpeg"
+          alt="Jessica Randall's profile picture"
+        />
+        <h2>Jessica Randall</h2>
+        <p class="location">London, United Kingdom</p>
         <p class="sub-text">"Front-end developer and avid reader."</p>
-
-        <button>GitHub</button>
-        <button>Frontend Mentor</button>
-        <button>Linkedin</button>
-        <button>Twitter</button>
-        <button>Instagram</button>
+        <ul>
+          <li><a href="#">GitHub</a></li>
+          <li><a href="#">Frontend Mentor</a></li>
+          <li><a href="#">Linkedin</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Instagram</a></li>
+        </ul>
       </div>
     </main>
   </body>
