--- a/social-links-profile-main/index.html
+++ b/social-links-profile-main/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <main>
+      <h1 class="sr-only">Jessica's Socials</h1>
       <div class="card">
         <img
           src="./assets/images/avatar-jessica.jpeg"
