--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -177,7 +177,7 @@
             </ul>
           </div>
           <div class="product__text-section">
-            <hgroup>
+            <div>
               <p class="product__ribbon">Sneaker Company</p>
               <h2 class="product__text">Fall Limited Edition Sneakers</h2>
               <p class="product__sub-text">
@@ -185,7 +185,7 @@
                 companion. Featuring a durable rubber outer sole, they'll
                 withstand everything the weather can offer.
               </p>
-            </hgroup>
+            </div>
             <div class="product__price flex">
               <dl class="product__current-price flex">
                 <dt class="sr-only">Current price:</dt>
