Added autofocus to thumbnail img

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -125,6 +125,7 @@
                     id="image-product-1"
                     name="product-thumbnail-img"
                     aria-label="Select to see first product image"
+                    autofocus
                   />
                   <img
                     src="./assets/images/image-product-1-thumbnail.jpg"
