Added progress bar

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -107,6 +107,7 @@
                 alt="Image of the Sneaker brand white shoes with some beige on the sides"
                 aria-controls="modal-img-prev"
               />
+              <progress id="progress" value="1" max="4" aria-hidden="true"></progress>
               <button id="next-btn" class="mobile-only next-btn" aria-label="Click to see next image">
                 <img
                   src="./assets/images/icon-next.svg"
