Added progress bar and made img modal non focusable

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -237,7 +237,7 @@
         <h2 id="modal-image-title" class="sr-only">Image Preview Modal</h2>
         <div class="product__imgs">
           <div class="product__main-img">        
-            <button id="close-img-modal" class="close-btn" aria-label="Close lightbox modal" aria-controls="modal-img-prev">
+            <button id="close-img-modal" class="close-btn" aria-label="Close lightbox modal" aria-controls="modal-img-prev" tabindex="-1">
               <img
                 src="./assets/images/icon-close.svg"
                 alt=""
@@ -245,7 +245,7 @@
                 height="15"
               />
             </button>
-            <button id="modal-prev-btn" class="prev-btn" aria-label="Click to see previous image">
+            <button id="modal-prev-btn" class="prev-btn" aria-label="Click to see previous image" tabindex="-1">
               <img
                 src="./assets/images/icon-previous.svg"
                 alt=""
@@ -258,7 +258,7 @@
               src="./assets/images/image-product-1.jpg"
               alt="Sneaker brand brown and white shoe preview image"
             />
-            <button id="modal-next-btn" class="next-btn" aria-label="Click to see next image">
+            <button id="modal-next-btn" class="next-btn" aria-label="Click to see next image" tabindex="-1">
               <img
                 src="./assets/images/icon-next.svg"
                 alt=""
@@ -277,6 +277,7 @@
                   id="modal-image-product-1"
                   name="product-thumbnail-img-modal"
                   aria-label="Select to see first product image"
+                  tabindex="-1"
                 />
                 <img
                   src="./assets/images/image-product-1-thumbnail.jpg"
@@ -291,6 +292,7 @@
                   id="modal-image-product-2"
                   name="product-thumbnail-img-modal"
                   aria-label="Select to see second product image"
+                  tabindex="-1"
                 />
                 <img
                   src="./assets/images/image-product-2-thumbnail.jpg"
@@ -305,6 +307,7 @@
                   id="modal-image-product-3"
                   name="product-thumbnail-img-modal"
                   aria-label="Select to see third product image"
+                  tabindex="-1"
                 />
                 <img
                   src="./assets/images/image-product-3-thumbnail.jpg"
@@ -319,6 +322,7 @@
                   id="modal-image-product-4"
                   name="product-thumbnail-img-modal"
                   aria-label="Select to see fourth product image"
+                  tabindex="-1"
                 />
                 <img
                   src="./assets/images/image-product-4-thumbnail.jpg"
