--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -37,7 +37,7 @@
           /></a>
      
           <ul id="side-nav" class="desktop-only side-nav" aria-hidden="true" aria-expanded="false">
-            <li><button aria-label="Close side navigation menu" id="close-nav" aria-controls="side-nav">
+            <li><button aria-label="Close side navigation menu" id="close-nav" aria-controls="side-nav" tabindex="-1">
               <img
                 
                 class="mobile-only" 
