--- a/sunnyside-agency-landing-page-main/index.html
+++ b/sunnyside-agency-landing-page-main/index.html
@@ -120,7 +120,7 @@
       <div class="features">
         <section>
           <div>
-            <h3>Graphic design</h3>
+            <h3>Graphic Design</h3>
             <p>
               Great design makes you memorable. We deliver artwork that
               underscores your brand message and captures potential clients’
