--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Frontend Mentor QR code card" />
+    <meta name="author" content="Asilcan Toper" />
 
     <link
       rel="icon"
