--- a/intro-component-with-signup-form-master/index.html
+++ b/intro-component-with-signup-form-master/index.html
@@ -72,6 +72,7 @@
                 id="email"
                 type="email"
                 placeholder="Email Address"
+                pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$"
                 required
                 autocomplete="email"
                 aria-describedby="password-hint"
