Changed noscript position

--- a/multi-step-form-main/index.html
+++ b/multi-step-form-main/index.html
@@ -19,6 +19,9 @@
     <title>Frontend Mentor | Multi-step form</title>
   </head>
   <body>
+    <noscript>
+        <p style="text-align: center">You need to enable JavaScript!</p>
+    </noscript>
     <div id="root"></div>
     <script defer>
       window.addEventListener("blur", () => {
@@ -30,8 +33,5 @@
       });
     </script>
     <script type="module" src="/src/main.jsx"></script>
-    <noscript
-      ><p style="text-align: center">You need to enable JavaScript!</p>
-    </noscript>
   </body>
 </html>
