--- a/multi-step-form-main/index.html
+++ b/multi-step-form-main/index.html
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Asilcan Toper" />
     <meta name="description" content="FeM Multi Step Form" />
-    <meta name="robots" content="index, follow" />
-    <meta
-      name="keywords"
-      content="Frontend, Frontend Mentor, Multi Step Form, Asilcan Toper"
-    />
+    <meta name="robots" content="index" />
     <link
       rel="icon"
       type="image/png"
